Added new graphic for awards (trophy) and added entry of fellowship:

--- a/collections/_research/2019-07-20-Markit.md
+++ b/collections/_research/2019-07-20-Markit.md
@@ -5,7 +5,7 @@ title: Markit, a Blender Add-on to Augment 3D Models
 
 ![Preview of Markit, showing the UI interface of the tool in Blender]({{site.url}}{{site.baseurl}}/src/assets/img/markit/markit_demo.jpg)
 
-Authors: Lei Shi, ***Ricardo E. Gonzalez***
+Authors: Lei Shi, and ***Ricardo E. Gonzalez***
 
 Markit is an add-on to Blender, a popular 3D modeling application among 3D model designers. It provides step-by-step guidance for creating augmented models for non-experts. After importing a downloaded model into Markit, a maker can add the tracker scaffold and associate textual annotations with elements on the model. With the model annotated, we can explore the annotations through [Talkit++](link).
 
