--- a/collections/_research/2020-04-03-Molder.md
+++ b/collections/_research/2020-04-03-Molder.md
@@ -5,7 +5,7 @@ title: "Molder: An Accessible Design Tool for Tactile Maps"
 
 ![Preview of Molder, showing the poster presented at the demo showcase on ASSETS'19]({{site.url}}{{site.baseurl}}/src/assets/img/molder/demo_molder.jpg)
 
-Authors: Lei Shi, Yuhang Zhao, ***Ricardo E. Gonzalez***, Elizabeth Kupferstein, Shiri Azenkot
+Authors: Lei Shi, Yuhang Zhao, ***Ricardo E. Gonzalez***, Elizabeth Kupferstein, and Shiri Azenkot
 
 Today, Orientation and Mobility (O&M) specialists and teachers are often responsible for designing tactile materials to teach their students. However, most of them do not have professional modeling skills, and many are visually impaired themselves. To address this issue, we designed Molder, an accessible design tool for interactive tactile maps, an important type of tactile materials that can help students learn O&M skills.
 
