Added swap theme, only working in PC

--- a/collections/_research/2020-04-03-Molder.md
+++ b/collections/_research/2020-04-03-Molder.md
@@ -1,5 +1,6 @@
 ---
 title: "Molder: An Accessible Design Tool for Tactile Maps"
+about: false
 ---
 # Molder: An Accessible Design Tool for Tactile Maps
 
