--- a/collections/_research/2022-07-20-Hands_On.md
+++ b/collections/_research/2022-07-20-Hands_On.md
@@ -1,5 +1,6 @@
 ---
 title: "Hands-On: Using Hand Gestures to Interactively Obtain Descriptions in a VR Environment"
+about: false
 ---
 # [Hands-On: Using Gestures to Control Descriptions of a Virtual Environment for People with Visual Impairments](https://drive.google.com/file/d/1xyjGv0lWaBrHa0mP0Y3oi1QJyDNfttGG/view?usp=sharing)
 
