Cleaned up the css furthermore, left comments on various edited sass files and htmls with TODOs

--- a/collections/_research/2018-01-01-Talkit++.md
+++ b/collections/_research/2018-01-01-Talkit++.md
@@ -19,7 +19,7 @@ Talkit++ detects the model and finger gestures using computer vision algorithms,
 
 ## Demo
 
-<iframe class="demo-video" width="560" height="315" src="https://www.youtube.com/embed/BG8hCwfsZvU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe class="demo_video" width="560" height="315" src="https://www.youtube.com/embed/BG8hCwfsZvU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ## Related papers & publications
