--- a/collections/_research/2022-07-20-Hands_On.md
+++ b/collections/_research/2022-07-20-Hands_On.md
@@ -7,7 +7,7 @@ about: false
 
 ## Demo
 
-<iframe class= "demo-video" width="560" height="315" src="https://www.youtube.com/embed/uTJXJC7JgeE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe class= "demo_video" width="560" height="315" src="https://www.youtube.com/embed/uTJXJC7JgeE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 Authors: ***Ricardo E. Gonzalez Penuela***, Wren Poremba, Christina Trice, and Shiri Azenkot.
 
