--- a/collections/_research/2019-07-20-Markit.md
+++ b/collections/_research/2019-07-20-Markit.md
@@ -16,7 +16,7 @@ Markit enables non-expert users to be able to create their own 3D printed augmen
 
 Explained by Lei Shi, the first Author! Amazing 
 <div>
-<iframe class="demo-video"  width="560" height="315" src="https://www.youtube.com/embed/pHFmWrdXs8k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe class="demo_video"  width="560" height="315" src="https://www.youtube.com/embed/pHFmWrdXs8k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 ## Related papers & publications
 
